# eocrc-dat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/data/: synthetic.toml  synthetic_smoke.toml
configs/experiment/: _smoke.toml  ablation_component_ft_only.toml  ablation_component_tabnet_only.toml  ablation_input_no_demographics.toml  ablation_input_no_diagnoses.toml  ablation_input_no_laboratory.toml  ablation_input_no_medications.toml  ablation_input_no_procedures.toml  ablation_pairwise_no_attention.toml  main.toml  supplementary_simplified_score.toml  supplementary_unmatched_cohort.toml
configs/model/: dat.toml  dat_smoke.toml  ft_transformer.toml  logistic_regression.toml  mlp.toml  saint.toml  tabnet.toml  xgboost.toml
configs/train/: _smoke.toml  default.toml
docs/: deviations.md  implementation-map.md  project-context.md  repo-plan.md
eocrc_dat/actuarial/: bootstrap.py  decision_curve.py  delong.py  fairness.py  interaction.py  metrics.py  multiplicity.py
eocrc_dat/agency/: cli.py  commands.py  config.py  schema.py
eocrc_dat/intake/: adapters.py  cohorts.py  synthetic.py
eocrc_dat/ledger/: records.py  schema.py
eocrc_dat/objective/: constraints.py  losses.py
eocrc_dat/rating/: engineering.py
eocrc_dat/reserving/: checkpoint.py  schedule.py  trainer.py  tuning.py
eocrc_dat/support/: devices.py  io.py  logging.py  (+1 more)
scripts/: launch_eval.sh  launch_train.sh  prepare_data.sh
tests/: conftest.py  test_config_integrity.py  test_dat_overfit_and_grad.py  test_decision_curve.py  test_delong.py  test_engineering.py  test_fairness.py  test_interaction.py  test_metrics_reference.py  test_model_shapes.py  test_multiplicity.py  test_scorecard.py  test_sparsemax_invariants.py  test_style_guard.py  test_synthetic_regression.py  test_training_smoke.py
(+14 files in other folders)
